--- a/index_2026.html
+++ b/index_2026.html
@@ -265,7 +265,7 @@ footer {
 </div>
 
 <footer>
-    © 2026 Painel Oficial de Monitorização
+    © 2026 Painel Oficial de Monitorização - Fonte de dados: ANEPCAPI (via proxy local)
 </footer>
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
