--- a/index_2026.html
+++ b/index_2026.html
@@ -47,33 +47,15 @@ body {
     animation: pulse 1.5s infinite;
 }
 
-.dot.online {
-    background: #22c55e;
-    box-shadow: 0 0 8px #22c55e;
-}
+.dot.online { background: #22c55e; box-shadow: 0 0 8px #22c55e; }
+.dot.offline { background: #ef4444; box-shadow: 0 0 8px #ef4444; }
 
-.dot.offline {
-    background: #ef4444;
-    box-shadow: 0 0 8px #ef4444;
-}
-
-@keyframes pulse {
-    0% { opacity: 1; }
-    50% { opacity: 0.4; }
-    100% { opacity: 1; }
-}
+@keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.4; } 100% { opacity: 1; } }
 
 /* ===== CONTENT ===== */
-.container {
-    padding: 30px;
-}
+.container { padding: 30px; }
 
-.section-title {
-    font-size: 18px;
-    margin-bottom: 15px;
-    font-weight: 600;
-    color: #1e3a8a;
-}
+.section-title { font-size: 18px; margin-bottom: 15px; font-weight: 600; color: #1e3a8a; }
 
 /* ===== CARTÕES ===== */
 .cards {
@@ -91,26 +73,11 @@ body {
     box-shadow: 0 2px 5px rgba(0,0,0,0.05);
 }
 
-.card p {
-    margin: 0;
-    font-size: 14px;
-    color: #6b7280;
-}
-
-.card h2 {
-    margin: 8px 0 0 0;
-    font-size: 26px;
-    color: #111827;
-}
+.card p { margin: 0; font-size: 14px; color: #6b7280; }
+.card h2 { margin: 8px 0 0 0; font-size: 26px; color: #111827; }
 
 /* ===== FILTROS + MAPA ===== */
-.filters-map-container {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 40px;
-    flex-wrap: wrap;
-}
-
+.filters-map-container { display: flex; gap: 20px; margin-bottom: 40px; flex-wrap: wrap; }
 .filters {
     flex: 1 1 250px;
     background: white;
@@ -118,88 +85,51 @@ body {
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.05);
 }
-
-.filters label {
-    display: block;
-    margin-bottom: 10px;
-    font-size: 14px;
-}
-
+.filters label { display: block; margin-bottom: 10px; font-size: 14px; }
 .filters select {
-    width: 100%;
-    padding: 6px;
-    margin-top: 4px;
-    margin-bottom: 12px;
-    border-radius: 4px;
-    border: 1px solid #d1d5db;
+    width: 100%; padding: 6px; margin-top: 4px; margin-bottom: 12px;
+    border-radius: 4px; border: 1px solid #d1d5db;
 }
-
 .filters button {
-    padding: 8px 12px;
-    background: #1e3a8a;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    padding: 8px 12px; background: #1e3a8a; color: white; border: none; border-radius: 4px; cursor: pointer;
 }
 
-.map-container {
-    flex: 3 1 600px;
-}
+.map-container { flex: 3 1 600px; }
 
 /* ===== TABELA ===== */
-table {
-    width: 100%;
-    border-collapse: collapse;
-    background: white;
-    margin-bottom: 40px;
+table { width: 100%; border-collapse: collapse; background: white; margin-bottom: 40px; }
+th { background: #e5e7eb; padding: 12px; text-align: left; font-size: 14px; }
+td { padding: 10px; border-bottom: 1px solid #e5e7eb; font-size: 13px; }
+tr:hover { background: #f9fafb; }
+
+/* ===== BADGES DE ESTADO ===== */
+.estado-badge {
+    display:inline-block; padding:4px 10px; border-radius:12px; font-size:12px;
+    font-weight:600; text-align:center; min-width:90px;
 }
 
-th {
-    background: #e5e7eb;
-    padding: 12px;
-    text-align: left;
-    font-size: 14px;
-}
-
-td {
-    padding: 10px;
-    border-bottom: 1px solid #e5e7eb;
-    font-size: 13px;
-}
-
-tr:hover {
-    background: #f9fafb;
-}
+.em-curso { background:#ef4444; color:#fff; }
+.despacho { background:#f97316; color:#000; }
+.despacho1 { background:#facc15; color:#000; }
+.em-resolucao { background:#3b82f6; color:#fff; }
+.em-conclusao { background:#22c55e; color:#000; }
 
 /* ===== MAP ===== */
-#map {
-    height: 450px;
-    border-radius: 8px;
-}
+#map { height: 450px; border-radius: 8px; }
 
 /* ===== FOOTER ===== */
-footer {
-    text-align: center;
-    padding: 15px;
-    background: #1e3a8a;
-    color: white;
-    font-size: 12px;
-}
+footer { text-align: center; padding: 15px; background: #1e3a8a; color: white; font-size: 12px; }
+
 </style>
 </head>
 
 <body>
-
 <header class="topbar">
     <div class="status">
         <span id="statusDot" class="dot online"></span>
         <span id="datetime"></span>
     </div>
-
-    <div class="title">
-        Painel Institucional de Ocorrências
-    </div>
+    <div class="title">Painel Institucional de Ocorrências</div>
 </header>
 
 <div class="container">
@@ -220,21 +150,11 @@ footer {
     <div class="filters-map-container">
         <div class="filters">
             <div class="section-title">Filtros</div>
-            <label>Região: 
-                <select id="filterRegiao"><option value="">Todas</option></select>
-            </label>
-            <label>Concelho: 
-                <select id="filterConcelho"><option value="">Todos</option></select>
-            </label>
-            <label>Freguesia: 
-                <select id="filterFreguesia"><option value="">Todas</option></select>
-            </label>
-            <label>Tipo Ocorrência: 
-                <select id="filterTipo"><option value="">Todos</option></select>
-            </label>
-            <label>Estado: 
-                <select id="filterEstado"><option value="">Todos</option></select>
-            </label>
+            <label>Região: <select id="filterRegiao"><option value="">Todas</option></select></label>
+            <label>Concelho: <select id="filterConcelho"><option value="">Todos</option></select></label>
+            <label>Freguesia: <select id="filterFreguesia"><option value="">Todas</option></select></label>
+            <label>Tipo Ocorrência: <select id="filterTipo"><option value="">Todos</option></select></label>
+            <label>Estado: <select id="filterEstado"><option value="">Todos</option></select></label>
             <button id="applyFilters">Aplicar Filtros</button>
         </div>
 
@@ -354,16 +274,16 @@ function applyFilters() {
     updateDashboard(filtered);
 }
 
-/* ===== ESTILOS PARA ESTADO ===== */
-function getEstadoStyle(estado) {
-    if (!estado) return {background:"#d1d5db", color:"#000"};
+/* ===== BADGES DE ESTADO ===== */
+function getEstadoBadge(estado) {
+    if (!estado) return `<span class="estado-badge">-</span>`;
     const e = estado.toLowerCase();
-    if (e === "em curso") return {background:"#ef4444", color:"#fff"};
-    if (e === "despacho") return {background:"#f97316", color:"#000"};
-    if (e === "despacho de 1º alerta") return {background:"#facc15", color:"#000"};
-    if (e === "em resolução") return {background:"#3b82f6", color:"#fff"};
-    if (e === "em conclusão") return {background:"#22c55e", color:"#000"};
-    return {background:"#d1d5db", color:"#000"};
+    if (e === "em curso") return `<span class="estado-badge em-curso">${estado}</span>`;
+    if (e === "despacho") return `<span class="estado-badge despacho">${estado}</span>`;
+    if (e === "despacho de 1º alerta") return `<span class="estado-badge despacho1">${estado}</span>`;
+    if (e === "em resolução") return `<span class="estado-badge em-resolucao">${estado}</span>`;
+    if (e === "em conclusão") return `<span class="estado-badge em-conclusao">${estado}</span>`;
+    return `<span class="estado-badge">${estado}</span>`;
 }
 
 /* ===== ATUALIZAR DASHBOARD ===== */
@@ -393,8 +313,6 @@ function updateDashboard(features) {
 
         if (p.Significativa === 1 || (p.Significativa && p.Significativa.toString().toLowerCase() === "sim")) totalSignificativas++;
 
-        const estadoStyle = getEstadoStyle(p.EstadoOcorrencia);
-
         table.innerHTML += `
             <tr>
                 <td>${p.Data || "-"}</td>
@@ -403,7 +321,7 @@ function updateDashboard(features) {
                 <td>${p.Freguesia || "-"}</td>
                 <td>${p.Localidade || "-"}</td>
                 <td>${p.Tipo || "-"}</td>
-                <td style="background-color:${estadoStyle.background}; color:${estadoStyle.color};">${p.EstadoOcorrencia || "-"}</td>
+                <td>${getEstadoBadge(p.EstadoOcorrencia)}</td>
                 <td>${p.Operacionais || 0}</td>
                 <td>${p.MeiosTerrestres || 0}</td>
                 <td>${p.MeiosAereos || 0}</td>
@@ -438,7 +356,6 @@ function updateDashboard(features) {
     document.getElementById('totalSignificativas').innerText = totalSignificativas;
 }
 
-// FETCH inicial
 fetchGeoData();
 setInterval(fetchGeoData, 60000);
 </script>
