--- a/index_2026.html
+++ b/index_2026.html
@@ -6,6 +6,7 @@
 <title>Painel Institucional de Ocorrências</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
 <style>
 body {
@@ -25,28 +26,11 @@ body {
     justify-content: space-between;
 }
 
-.title {
-    font-size: 20px;
-    font-weight: 600;
-    text-align: center;
-    flex: 1;
-}
+.title { font-size: 20px; font-weight: 600; text-align: center; flex: 1; }
 
-.status {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-size: 14px;
-}
+.status { display: flex; align-items: center; gap: 10px; font-size: 14px; }
 
-.dot {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    box-shadow: 0 0 8px;
-    animation: pulse 1.5s infinite;
-}
-
+.dot { width: 10px; height: 10px; border-radius: 50%; box-shadow: 0 0 8px; animation: pulse 1.5s infinite; }
 .dot.online { background: #22c55e; box-shadow: 0 0 8px #22c55e; }
 .dot.offline { background: #ef4444; box-shadow: 0 0 8px #ef4444; }
 
@@ -54,7 +38,6 @@ body {
 
 /* ===== CONTENT ===== */
 .container { padding: 30px; }
-
 .section-title { font-size: 18px; margin-bottom: 15px; font-weight: 600; color: #1e3a8a; }
 
 /* ===== CARTÕES ===== */
@@ -71,10 +54,32 @@ body {
     border-radius: 8px;
     border-left: 6px solid #1e3a8a;
     box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    position: relative;
 }
 
 .card p { margin: 0; font-size: 14px; color: #6b7280; }
-.card h2 { margin: 8px 0 0 0; font-size: 26px; color: #111827; }
+.card h2 { margin: 8px 0 0 0; font-size: 26px; color: #111827; display: flex; align-items: center; gap: 10px; }
+
+/* BADGES NOS CARTÕES */
+.card .badge {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    display: inline-flex;
+    align-items: center;
+    gap: 5px;
+    padding: 3px 8px;
+    border-radius: 12px;
+    font-size: 12px;
+    font-weight: 600;
+    color: white;
+}
+
+.badge.incendios { background: #ef4444; }
+.badge.aereos { background: #3b82f6; }
+.badge.terrestres { background: #f97316; }
+.badge.aquaticos { background: #22c55e; }
+.badge.significativas { background: #6b7280; }
 
 /* ===== FILTROS + MAPA ===== */
 .filters-map-container { display: flex; gap: 20px; margin-bottom: 40px; flex-wrap: wrap; }
@@ -90,9 +95,7 @@ body {
     width: 100%; padding: 6px; margin-top: 4px; margin-bottom: 12px;
     border-radius: 4px; border: 1px solid #d1d5db;
 }
-.filters button {
-    padding: 8px 12px; background: #1e3a8a; color: white; border: none; border-radius: 4px; cursor: pointer;
-}
+.filters button { padding: 8px 12px; background: #1e3a8a; color: white; border: none; border-radius: 4px; cursor: pointer; }
 
 .map-container { flex: 3 1 600px; }
 
@@ -103,11 +106,7 @@ td { padding: 10px; border-bottom: 1px solid #e5e7eb; font-size: 13px; }
 tr:hover { background: #f9fafb; }
 
 /* ===== BADGES DE ESTADO ===== */
-.estado-badge {
-    display:inline-block; padding:4px 10px; border-radius:12px; font-size:12px;
-    font-weight:600; text-align:center; min-width:90px;
-}
-
+.estado-badge { display:inline-block; padding:4px 10px; border-radius:12px; font-size:12px; font-weight:600; text-align:center; min-width:90px; }
 .em-curso { background:#ef4444; color:#fff; }
 .despacho { background:#f97316; color:#000; }
 .despacho1 { background:#facc15; color:#000; }
@@ -137,13 +136,40 @@ footer { text-align: center; padding: 15px; background: #1e3a8a; color: white; f
     <!-- CARTÕES -->
     <div class="section-title">Indicadores Gerais</div>
     <div class="cards">
-        <div class="card"><p>Total Ocorrências</p><h2 id="totalOcorrencias">0</h2></div>
-        <div class="card"><p>Total Operacionais</p><h2 id="totalOperacionais">0</h2></div>
-        <div class="card"><p>Total Veículos</p><h2 id="totalVeiculos">0</h2></div>
-        <div class="card"><p>Total Aéreos</p><h2 id="totalAereos">0</h2></div>
-        <div class="card"><p>Total Aquáticos</p><h2 id="totalAquaticos">0</h2></div>
-        <div class="card"><p>Total Incêndios / Detritos / Equipamentos</p><h2 id="totalIncendios">0</h2></div>
-        <div class="card"><p>Significativas</p><h2 id="totalSignificativas">0</h2></div>
+        <div class="card">
+            <p>Total Ocorrências</p>
+            <h2 id="totalOcorrencias"><i class="fas fa-bullseye"></i> 0</h2>
+        </div>
+        <div class="card">
+            <p>Total Operacionais</p>
+            <h2 id="totalOperacionais"><i class="fas fa-user-shield"></i> 0</h2>
+            <span class="badge terrestres"><i class="fas fa-truck"></i> Terrestres</span>
+        </div>
+        <div class="card">
+            <p>Total Veículos</p>
+            <h2 id="totalVeiculos"><i class="fas fa-truck"></i> 0</h2>
+            <span class="badge terrestres"><i class="fas fa-truck"></i></span>
+        </div>
+        <div class="card">
+            <p>Total Aéreos</p>
+            <h2 id="totalAereos"><i class="fas fa-helicopter"></i> 0</h2>
+            <span class="badge aereos"><i class="fas fa-helicopter"></i></span>
+        </div>
+        <div class="card">
+            <p>Total Aquáticos</p>
+            <h2 id="totalAquaticos"><i class="fas fa-water"></i> 0</h2>
+            <span class="badge aquaticos"><i class="fas fa-water"></i></span>
+        </div>
+        <div class="card">
+            <p>Total Incêndios / Detritos / Equipamentos</p>
+            <h2 id="totalIncendios"><i class="fas fa-fire"></i> 0</h2>
+            <span class="badge incendios"><i class="fas fa-fire"></i></span>
+        </div>
+        <div class="card">
+            <p>Significativas</p>
+            <h2 id="totalSignificativas"><i class="fas fa-exclamation-triangle"></i> 0</h2>
+            <span class="badge significativas"><i class="fas fa-exclamation-triangle"></i></span>
+        </div>
     </div>
 
     <!-- FILTROS + MAPA -->
@@ -193,8 +219,9 @@ footer { text-align: center; padding: 15px; background: #1e3a8a; color: white; f
 </footer>
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
 <script>
-/* ===== DATA & HORA ===== */
+// ===== DATA & HORA =====
 function updateDateTime() {
     const now = new Date();
     const date = now.toLocaleDateString('pt-PT');
@@ -205,17 +232,15 @@ function updateDateTime() {
 setInterval(updateDateTime, 1000);
 updateDateTime();
 
-/* ===== MAPA ===== */
+// ===== MAPA =====
 const map = L.map('map').setView([39.5, -8.0], 6);
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: '&copy; OpenStreetMap contributors'
-}).addTo(map);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution: '&copy; OpenStreetMap contributors' }).addTo(map);
 
-/* ===== ESTADO API ===== */
+// ===== ESTADO API =====
 function setStatusOnline() { document.getElementById("statusDot").className = "dot online"; }
 function setStatusOffline() { document.getElementById("statusDot").className = "dot offline"; }
 
-/* ===== FETCH DADOS ===== */
+// ===== FETCH DADOS =====
 let allFeatures = [];
 async function fetchGeoData() {
     const url = "https://services-eu1.arcgis.com/VlrHb7fn5ewYhX6y/arcgis/rest/services/OcorrenciasSite/FeatureServer/0/query?where=1%3D1&outFields=*&outSR=4326&f=geojson";
@@ -230,7 +255,7 @@ async function fetchGeoData() {
     } catch (err) { console.error(err); setStatusOffline(); }
 }
 
-/* ===== POPULAR FILTROS ===== */
+// ===== FILTROS =====
 function populateFilters() {
     const regiaoSet = new Set(), concelhoSet = new Set(), freguesiaSet = new Set(), tipoSet = new Set(), estadoSet = new Set();
     allFeatures.forEach(f => {
@@ -241,7 +266,6 @@ function populateFilters() {
         if (p.Tipo) tipoSet.add(p.Tipo);
         if (p.EstadoOcorrencia) estadoSet.add(p.EstadoOcorrencia);
     });
-
     const addOptions = (selectId, values) => {
         const sel = document.getElementById(selectId);
         sel.innerHTML = `<option value="">Todos</option>` + Array.from(values).map(v => `<option value="${v}">${v}</option>`).join('');
@@ -253,7 +277,7 @@ function populateFilters() {
     addOptions('filterEstado', estadoSet);
 }
 
-/* ===== APLICAR FILTROS ===== */
+// ===== APLICAR FILTROS =====
 document.getElementById('applyFilters').addEventListener('click', applyFilters);
 function applyFilters() {
     const fRegiao = document.getElementById('filterRegiao').value;
@@ -274,7 +298,7 @@ function applyFilters() {
     updateDashboard(filtered);
 }
 
-/* ===== BADGES DE ESTADO ===== */
+// ===== BADGES DE ESTADO =====
 function getEstadoBadge(estado) {
     if (!estado) return `<span class="estado-badge">-</span>`;
     const e = estado.toLowerCase();
@@ -286,76 +310,78 @@ function getEstadoBadge(estado) {
     return `<span class="estado-badge">${estado}</span>`;
 }
 
-/* ===== ATUALIZAR DASHBOARD ===== */
+// ===== ATUALIZAR DASHBOARD =====
 function updateDashboard(features) {
-    let totalAereos = 0, totalOperacionais = 0, totalVeiculos = 0, totalAquaticos = 0, totalIncendios = 0, totalSignificativas = 0;
+    let totalAereos=0, totalOperacionais=0, totalVeiculos=0, totalAquaticos=0, totalIncendios=0, totalSignificativas=0;
     const table = document.getElementById('tableBody');
-    table.innerHTML = "";
+    table.innerHTML="";
 
-    map.eachLayer(layer => { if (layer instanceof L.Marker) map.removeLayer(layer); });
+    map.eachLayer(layer => { if(layer instanceof L.Marker) map.removeLayer(layer); });
 
     features.forEach(f => {
-        const p = f.properties;
-        const coords = f.geometry?.coordinates;
+        const p=f.properties;
+        const coords=f.geometry?.coordinates;
 
-        totalAereos += Number(p.MeiosAereos || 0);
-        totalOperacionais += Number(p.Operacionais || 0);
-        totalVeiculos += Number(p.MeiosTerrestres || 0);
-        totalAquaticos += Number(p.MeiosAquaticos || 0);
+        totalAereos += Number(p.MeiosAereos||0);
+        totalOperacionais += Number(p.Operacionais||0);
+        totalVeiculos += Number(p.MeiosTerrestres||0);
+        totalAquaticos += Number(p.MeiosAquaticos||0);
 
-        if (p.Especie) {
+        if(p.Especie){
             const especieLower = p.Especie.toLowerCase();
-            if (especieLower.includes("incêndio") || especieLower.includes("detritos confinados") ||
-                especieLower.includes("detritos não confinados") || especieLower.includes("equipamentos")) {
+            if(especieLower.includes("incêndio")||especieLower.includes("detritos confinados")||
+               especieLower.includes("detritos não confinados")||especieLower.includes("equipamentos")){
                 totalIncendios++;
             }
         }
 
-        if (p.Significativa === 1 || (p.Significativa && p.Significativa.toString().toLowerCase() === "sim")) totalSignificativas++;
+        if(p.Significativa===1||(p.Significativa && p.Significativa.toString().toLowerCase()==="sim")) totalSignificativas++;
 
-        table.innerHTML += `
+        table.innerHTML+=`
             <tr>
-                <td>${p.Data || "-"}</td>
-                <td>${p.Regiao || "-"}</td>
-                <td>${p.Concelho || "-"}</td>
-                <td>${p.Freguesia || "-"}</td>
-                <td>${p.Localidade || "-"}</td>
-                <td>${p.Tipo || "-"}</td>
+                <td>${p.Data||"-"}</td>
+                <td>${p.Regiao||"-"}</td>
+                <td>${p.Concelho||"-"}</td>
+                <td>${p.Freguesia||"-"}</td>
+                <td>${p.Localidade||"-"}</td>
+                <td>${p.Tipo||"-"}</td>
                 <td>${getEstadoBadge(p.EstadoOcorrencia)}</td>
-                <td>${p.Operacionais || 0}</td>
-                <td>${p.MeiosTerrestres || 0}</td>
-                <td>${p.MeiosAereos || 0}</td>
-                <td>${p.MeiosAquaticos || 0}</td>
+                <td>${p.Operacionais||0}</td>
+                <td>${p.MeiosTerrestres||0}</td>
+                <td>${p.MeiosAereos||0}</td>
+                <td>${p.MeiosAquaticos||0}</td>
             </tr>
         `;
 
-        if (coords) {
-            const marker = L.marker([coords[1], coords[0]]).addTo(map);
+        if(coords){
+            const marker=L.marker([coords[1], coords[0]]).addTo(map);
             marker.bindPopup(`
-                <b>Data / Hora:</b> ${p.Data || '-'}<br>
-                <b>Região:</b> ${p.Regiao || '-'}<br>
-                <b>Concelho:</b> ${p.Concelho || '-'}<br>
-                <b>Freguesia:</b> ${p.Freguesia || '-'}<br>
-                <b>Localização:</b> ${p.Localidade || '-'}<br>
-                <b>Natureza:</b> ${p.Tipo || '-'}<br>
-                <b>Estado:</b> ${p.EstadoOcorrencia || '-'}<br>
-                <b>Operacionais:</b> ${p.Operacionais || 0}<br>
-                <b>Meios Terrestres:</b> ${p.MeiosTerrestres || 0}<br>
-                <b>Meios Aéreos:</b> ${p.MeiosAereos || 0}<br>
-                <b>Meios Aquáticos:</b> ${p.MeiosAquaticos || 0}
+                <b>Data / Hora:</b> ${p.Data||'-'}<br>
+                <b>Região:</b> ${p.Regiao||'-'}<br>
+                <b>Concelho:</b> ${p.Concelho||'-'}<br>
+                <b>Freguesia:</b> ${p.Freguesia||'-'}<br>
+                <b>Localização:</b> ${p.Localidade||'-'}<br>
+                <b>Natureza:</b> ${p.Tipo||'-'}<br>
+                <b>Estado:</b> ${p.EstadoOcorrencia||'-'}<br>
+                <b>Operacionais:</b> ${p.Operacionais||0}<br>
+                <b>Meios Terrestres:</b> ${p.MeiosTerrestres||0}<br>
+                <b>Meios Aéreos:</b> ${p.MeiosAereos||0}<br>
+                <b>Meios Aquáticos:</b> ${p.MeiosAquaticos||0}
             `);
         }
     });
 
-    document.getElementById('totalOcorrencias').innerText = features.length;
-    document.getElementById('totalAereos').innerText = totalAereos;
-    document.getElementById('totalOperacionais').innerText = totalOperacionais;
-    document.getElementById('totalVeiculos').innerText = totalVeiculos;
-    document.getElementById('totalAquaticos').innerText = totalAquaticos;
-    document.getElementById('totalIncendios').innerText = totalIncendios;
-    document.getElementById('totalSignificativas').innerText = totalSignificativas;
+    // Atualizar os cartões
+    document.getElementById('totalOcorrencias').innerHTML = `<i class="fas fa-bullseye"></i> ${features.length}`;
+    document.getElementById('totalAereos').innerHTML = `<i class="fas fa-helicopter"></i> ${totalAereos}`;
+    document.getElementById('totalOperacionais').innerHTML = `<i class="fas fa-user-shield"></i> ${totalOperacionais}`;
+    document.getElementById('totalVeiculos').innerHTML = `<i class="fas fa-truck"></i> ${totalVeiculos}`;
+    document.getElementById('totalAquaticos').innerHTML = `<i class="fas fa-water"></i> ${totalAquaticos}`;
+    document.getElementById('totalIncendios').innerHTML = `<i class="fas fa-fire"></i> ${totalIncendios}`;
+    document.getElementById('totalSignificativas').innerHTML = `<i class="fas fa-exclamation-triangle"></i> ${totalSignificativas}`;
 }
 
+// Buscar dados da API inicialmente e atualizar a cada 60s
 fetchGeoData();
 setInterval(fetchGeoData, 60000);
 </script>
